--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+             <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                <p id="compatibilidade">Seu navegador não é compatível a esse recurso 😔</p>
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela">
+                <img src="imagens/logo-home.jpg" alt="home">
+            </a> <br>
+            <a href="#" target="tela">
+                <img src="imagens/logo-instagram.jpg" alt="Instagram">
+            </a> <br>
+            <a href="#" target="tela">
+                <img src="imagens/logo-github.jpg" alt="">
+            </a>
         </section>
     </main>
 </body>
