Atualizei o projeto com minhas redes sociais

--- a/instagram.html
+++ b/instagram.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet" href="estilos/social.css">
+
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE AQUI</a>
+    <img src="imagens/pg-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/kallebywz/" target="_blank">ACESSE AQUI</a>
 </body>
 </html>
