--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="GitHub">
-    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE AQUI</a>
+    <img src="imagens/pg-github.jpg" alt="GitHub">
+    <a href="https://github.com/kallebyalencar" target="_blank">ACESSE AQUI</a>
 </body>
 </html>
